.text-break - Classe de apoio para quebra de texto (break-word !important;)

--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,20 @@
 <body>
 	<div class="container">
 		<div class="row justify-content-center">
-			<div class="col-8">
+			<div class="col-6">
 				<div class="card my-5">
 					<div class="card-body">
 						<h2 class="card-title">Converter em Link</h2>
-						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque veniam nam veritatis quod ad nobis, ducimus, labore unde ratione dolores dignissimos dolorum, expedita deserunt necessitatibus commodi temporibus atque voluptates id.</p>
+						<p class="card-text text-break">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque veniam nam veritatis quod ad nobis, ducimus, labore unde ratione dolores dignissimos dolorum, expedita deserunt necessitatibus commodi temporibus atque voluptates id.</p>
+						<!-- Com a classe stretched-link todo o bloco .card passa a receber o href da tag <a> -->
 						<a href="#" class="btn btn-primary stretched-link">Saiba Mais</a>
 					</div>
-
+				</div>
+			</div>
+			<div class="col-2">
+				<div class="my-5">
+					<p class="card-text">abcdefghizlmnopqrstuvxz0123456789</p>
+					<p class="card-text text-break">abcdefghizlmnopqrstuvxz0123456789</p>
 				</div>
 			</div>
 		</div>
