--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
 				<div class="card my-5">
 					<div class="card-body">
 						<h2 class="card-title">Converter em Link</h2>
-						<p class="card-text text-break">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque veniam nam veritatis quod ad nobis, ducimus, labore unde ratione dolores dignissimos dolorum, expedita deserunt necessitatibus commodi temporibus atque voluptates id.</p>
+						<img src="assets/nebula.jpg" alt="" class="img-fluid rounded-lg">
+						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque veniam nam veritatis quod ad nobis, ducimus, labore unde ratione dolores dignissimos dolorum, expedita deserunt necessitatibus commodi temporibus atque voluptates id.</p>
 						<!-- Com a classe stretched-link todo o bloco .card passa a receber o href da tag <a> -->
 						<a href="#" class="btn btn-primary stretched-link">Saiba Mais</a>
 					</div>
@@ -23,6 +24,7 @@
 				<div class="my-5">
 					<p class="card-text">abcdefghizlmnopqrstuvxz0123456789</p>
 					<p class="card-text text-break">abcdefghizlmnopqrstuvxz0123456789</p>
+					
 				</div>
 			</div>
 		</div>
