.list-group-horizontal e .list-group-horizontal-md - Agrupando uma lista horizontalmente e tornando responsiva

--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,34 @@
 						<a href="#" class="btn btn-primary stretched-link">Saiba Mais</a>
 					</div>
 				</div>
+				<ul class="list-group my-5">
+					<li class="list-group-item">Item 01</li>
+					<li class="list-group-item">Item 02</li>
+					<li class="list-group-item">Item 03</li>
+					<li class="list-group-item">Item 04</li>
+				</ul>
+				<!-- Cria um grupo de listas na horizontal -->
+				<ul class="list-group list-group-horizontal my-5">
+					<li class="list-group-item">Item 01</li>
+					<li class="list-group-item">Item 02</li>
+					<li class="list-group-item">Item 03</li>
+					<li class="list-group-item">Item 04</li>
+				</ul>
+				<!-- list-group-horizontal-md cria um break point para tornar a lista responsiva -->
+				<ul class="list-group list-group-horizontal-md my-5">
+					<li class="list-group-item">Item 01</li>
+					<li class="list-group-item">Item 02</li>
+					<li class="list-group-item">Item 03</li>
+					<li class="list-group-item">Item 04</li>
+				</ul>
 			</div>
 			<div class="col-2">
 				<div class="my-5">
 					<p class="card-text">abcdefghizlmnopqrstuvxz0123456789</p>
 					<p class="card-text text-break">abcdefghizlmnopqrstuvxz0123456789</p>
-					
 				</div>
 			</div>
+
 		</div>
 	</div>
 	<script src="js/jquery.js"></script>
