--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,39 @@
 			</div>
 
 		</div>
+		<div class="container">
+			<div class="row justify-content-center my-5">
+				<!-- Button trigger modal -->
+				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+				  Launch demo modal
+				</button>
+
+				<!-- Modal -->
+				<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				  <div class="modal-dialog modal-dialog-scrollable" role="document">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias quibusdam ad aliquid aperiam commodi aut sunt ab, quod cumque nobis magni aspernatur accusantium facere recusandae eveniet! Itaque pariatur odit sapiente!</p>
+				        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias quibusdam ad aliquid aperiam commodi aut sunt ab, quod cumque nobis magni aspernatur accusantium facere recusandae eveniet! Itaque pariatur odit sapiente!</p>
+				        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias quibusdam ad aliquid aperiam commodi aut sunt ab, quod cumque nobis magni aspernatur accusantium facere recusandae eveniet! Itaque pariatur odit sapiente!</p>
+				        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias quibusdam ad aliquid aperiam commodi aut sunt ab, quod cumque nobis magni aspernatur accusantium facere recusandae eveniet! Itaque pariatur odit sapiente!</p>
+				        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias quibusdam ad aliquid aperiam commodi aut sunt ab, quod cumque nobis magni aspernatur accusantium facere recusandae eveniet! Itaque pariatur odit sapiente!</p>
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				        <button type="button" class="btn btn-primary">Save changes</button>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<script src="js/jquery.js"></script>
 	<script src="js/popper.js"></script>
