--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
 <body>
 	<div class="container">
 		<div class="row justify-content-center">
+			<h1>Lorem ipsum dolor sit amet.</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dolorum vitae sapiente autem dolore et, amet voluptatibus quae? Eaque corporis ea deserunt dolore accusantium voluptas, dignissimos blanditiis magnam distinctio sapiente.</p>
 			<div class="col-6">
 				<div class="card my-5">
 					<div class="card-body">
@@ -48,7 +50,8 @@
 			</div>
 
 		</div>
-		<div class="container">
+	</div>
+	<div class="container">
 			<div class="row justify-content-center my-5">
 				<!-- Button trigger modal -->
 				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -81,7 +84,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
 	<script src="js/jquery.js"></script>
 	<script src="js/popper.js"></script>
 	<script src="js/bootstrap.js"></script>
